--- a/examples/colab.ipynb
+++ b/examples/colab.ipynb
@@ -6,12 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "IN_COLAB = 'google.colab' in sys.modules\n",
-    "\n",
-    "if IN_COLAB: \n",
-    "    !pip install matplotlib seaborn numpy plotprofile\n",
-    "    # from google.colab import files"
+    "from google.colab import files\n",
+    "!pip install plotprofile\n",
+    "import plotProfile"
    ]
   },
   {
