Adjusted default behaviour with point_type=bar. Fixes #10

--- a/examples/colab.ipynb
+++ b/examples/colab.ipynb
@@ -92,17 +92,19 @@
         "      \"desaturate\": true,\n",
         "      \"desaturate_factor\": 1.2,\n",
         "      \"dashed\": [],\n",
+        "      \"dashed_spacing\": 2.5,\n",
         "      \"labels\": true,\n",
         "      \"show_legend\": true,\n",
         "      \"line_width\": 2.5,\n",
         "      \"bar_width\": 3.0,\n",
+        "      \"bar_length\": 0.3,\n",
         "      \"marker_size\": 6,\n",
         "      \"font_size\": 10,\n",
         "      \"font_family\": \"Arial\",\n",
         "      \"font_weight\": \"bold\",\n",
         "      \"font_style\": \"normal\",\n",
         "      \"axis_linewidth\": 2.0,\n",
-        "      \"buffer_factor\": 0.025,\n",
+        "      \"buffer_factor\": 0.05,\n",
         "      \"axes\": \"box\",\n",
         "      \"colors\": [\"darkcyan\", \"maroon\", \"midnightblue\", \"darkmagenta\", \"darkgreen\", \"saddlebrown\"],\n",
         "      \"segment_annotations\": [],\n",
@@ -116,7 +118,8 @@
         "      \"annotation_buffer\": 0.0,\n",
         "      \"arrow_width\": 1.5,\n",
         "      \"sig_figs\": 1,\n",
-        "      \"point_label_color\": \"black\"\n",
+        "      \"point_label_color\": \"black\",\n",
+        "      \"connect_bar_ends\": true\n",
         "    },\n",
         "    \"presentation\": {\n",
         "      \"figsize\": [8, 5],\n",
