sorted import and capitalisation consistency

--- a/examples/colab.ipynb
+++ b/examples/colab.ipynb
@@ -58,7 +58,7 @@
         }
       ],
       "source": [
-        "from plotProfile import ReactionProfilePlotter\n",
+        "from plotprofile import ReactionProfilePlotter\n",
         "\n",
         "energy_sets = {\n",
         "    \"Pathway A\": [0.00, -2.0, 10.2, 1.4, -1.5, 2.0, -7.2],\n",
@@ -162,7 +162,7 @@
         }
       ],
       "source": [
-        "from plotProfile import ReactionProfilePlotter\n",
+        "from plotprofile import ReactionProfilePlotter\n",
         "\n",
         "energy_sets = {\n",
         "    \"Pathway A\": [0.00, -2.0, 10.2, 1.4, -1.5, 2.0, -7.2],\n",
