--- a/examples/colab.ipynb
+++ b/examples/colab.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -12,17 +12,21 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: plotprofile in /usr/local/lib/python3.11/dist-packages (1.0.2)\n"
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'google'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01mgoogle\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcolab\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m files\n\u001b[32m      2\u001b[39m get_ipython().system(\u001b[33m'\u001b[39m\u001b[33mpip install --force-reinstall plotprofile\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[34;01mplotprofile\u001b[39;00m\n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'google'"
           ]
         }
       ],
       "source": [
         "from google.colab import files\n",
-        "!pip install plotprofile\n",
-        "import plotProfile"
+        "!pip install --force-reinstall plotprofile\n",
+        "import plotprofile"
       ]
     },
     {
@@ -192,7 +196,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "reactions-env",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -206,7 +210,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.10"
+      "version": "3.12.9"
     }
   },
   "nbformat": 4,
