--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -135,7 +135,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "updated",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
